# vllm-factory

./: .gitignore  CHANGELOG.md  Makefile  README.md  bench_colbert_multi_instance.py  bench_gliner2_512.py  gen_economics_card.py  pyproject.toml  test_pr4_gliner2_acceptance.py  test_shape_prefix.py
.github/workflows/: ci.yml  release.yml
bench/: __init__.py  __main__.py  charts.py  registry.py  results.py  runner.py  vanilla_runners.py
bench/cache/: benchmark.py  benchmark_modal_vllm_l4_smoke_patched_minimal_final_2026-04-12.json  benchmark_modal_vllm_l4_smoke_patched_original_final_2026-04-12.json  compare_benchmark_reports.py  modal_gliner2_vllm.py
docs/: benchmark-methodology.md  multi_instance_serving.md
forge/: dispatcher.py  gliner_postprocessor.py  gliner_preprocessor.py  model_prep.py  multi_instance.py  processor_base.py  registration.py  serve_cli.py  server.py  validate_plugins.py
forge/_deprecated/: cli.py  config_utils.py  pooler_base.py  registry.py  weight_utils.py
forge/patches/: pooling_extra_kwargs.py
forge/testing/: harness.py
kernels/: flash_t5gemma2_attention.py  fused_embed_scale_eoi.py  fused_qk_norm_rope.py
models/deberta/: deberta_encoder.py
models/deberta_v2/: deberta_v2_encoder.py
models/modernbert/: modernbert_encoder.py
models/t5gemma2/: README.md  config.py  kernel_benchmark.py  parity_test.py  t5gemma2_encoder.py  t5gemma2_model.py  throughput_benchmark.py
notebooks/: 05_gliner_linker.ipynb
plugins/collfm2/: __init__.py  benchmark.py  config.py  generate_reference.py  io_processor.py  model.py  parity_test.py  pooler.py  processor.py  serve.py
plugins/colqwen3/: __init__.py  benchmark.py  config.py  generate_reference.py  io_processor.py  model.py  parity_test.py  pooler.py  processor.py  serve.py
plugins/deberta_gliner/: __init__.py  benchmark.py  io_processor.py  model.py  parity_test.py  pooler.py  processor.py
plugins/deberta_gliner2/: README.md  __init__.py  benchmark.py  config.py  io_processor.py  lora.py  model.py  parity_test.py  processor.py
plugins/deberta_gliner_linker/: __init__.py  benchmark.py  io_processor.py  model.py  pooler.py  processor.py
plugins/embeddinggemma/: __init__.py  benchmark.py  io_processor.py  model.py  parity_test.py  pooler.py  processor.py
plugins/lfm2_colbert/: __init__.py  benchmark.py  io_processor.py  model.py  parity_test.py
plugins/mmbert_gliner/: __init__.py  benchmark.py  io_processor.py  model.py  parity_test.py  processor.py
plugins/mmbert_gliner2/: __init__.py  config.py  io_processor.py  model.py
plugins/modernbert_gliner_rerank/: __init__.py  io_processor.py  model.py  pooler.py  processor.py
plugins/moderncolbert/: __init__.py  benchmark.py  config.py  generate_reference.py  io_processor.py  model.py  parity_test.py  processor.py  serve.py
plugins/mt5_gliner/: __init__.py  benchmark.py  io_processor.py  model.py  parity_test.py  pooler.py  processor.py
plugins/nemotron_colembed/: __init__.py  benchmark.py  config.py  io_processor.py  model.py  parity_test.py
poolers/: gliner.py  gliner2.py
scripts/: create_t5gemma2_reference_venv.sh
tests/: test_model_prep_bridge.py  test_modernbert_gliner_rerank_batch_contract.py  test_moderncolbert_projection_loading.py
tests/deberta/: test_supports_lora.py
tests/deberta_gliner2/: conftest.py  test_adapter_wiring.py  test_format_results.py  test_plugin_supports_lora.py  test_pooler_thresholds.py  test_schema_normalization.py
tests/deberta_v2/: test_supports_lora.py
vllm_factory/: __init__.py
vllm_factory/composable/: backbone_registry.py  io_processor.py  model.py  pooler_registry.py
vllm_factory/pooling/: shape_prefix.py
